<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@color/theme">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/Text_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:onClick="Transfer"

        />

    <TextView
        android:id="@+id/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/text_field"
        android:text="@string/create_new"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText

        android:id="@+id/Name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
       app:layout_constraintTop_toBottomOf="@+id/Text_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       android:padding="16dp"
        android:inputType="text"

        android:background="@color/text_field"
        />

    <EditText
        android:id="@+id/Age_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_age"
        app:layout_constraintTop_toBottomOf="@+id/Name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Gender_field"
    android:inputType="number"
        android:background="@color/text_field"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/Gender_field"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Age_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/text_field"
        android:padding="16dp"
        android:hint="@string/enter_your_gender"

        />


</androidx.constraintlayout.widget.ConstraintLayout>