<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".OPD_Activity">


    <ImageView
        android:id="@+id/opd_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        app:layout_constraintBottom_toTopOf="@id/name_field_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opd_text" />

    <EditText
        android:id="@+id/name_field_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/text_field"
        app:layout_constraintBottom_toTopOf="@id/age_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_age"
        app:layout_constraintBottom_toTopOf="@id/age_field_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/age_field_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/text_field"
        app:layout_constraintBottom_toTopOf="@id/gender_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_gender"
        app:layout_constraintBottom_toTopOf="@id/age_field_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/gender_field_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/text_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_field"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:padding="16dp"/>


    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@id/date_field"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.26" />

    <EditText
        android:id="@+id/date_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/text_field"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_btn"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.497"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@id/time_field"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintLeft_toRightOf="@+id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <EditText
        android:id="@+id/time_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/text_field"
        android:inputType="time"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_btn"

        app:layout_constraintLeft_toRightOf="@+id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/time_text"
      />

    <Button
    android:id="@+id/Next_btn"
    android:text="NEXT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
   android:onClick="Next"
    />


</androidx.constraintlayout.widget.ConstraintLayout>